refactored .js files

--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="shortcut icon" href="/logo/my-logo.png" />
     <title>Snake</title>
-    <script src="game.js" defer type="module"></script>
+    <script src="./js/game.js" defer type="module"></script>
   </head>
   <body>
     <div id="game-board"></div>
+    <div id="score-board"></div>
   </body>
 </html>
